fixed up files & test files; successfully ran first basic test

--- a/tests.html
+++ b/tests.html
@@ -9,12 +9,10 @@
    <script src="https://unpkg.com/mocha@4.0.1/mocha.js"></script>
    <script>mocha.setup('bdd');mocha.setup({ignoreLeaks: true});</script>
 <!-- Add your own script files here -->
-   <script type="module" src="test/example.spec.js"></script>
-   <script type="module" src="test/observable.spec.js"></script>
-   <script type="module" src="test/score.spec.js"></script>
+   <script type="module" src="test/deck.test.js"></script>
    <script type="module">
-      //mocha.checkLeaks();
+      mocha.checkLeaks();
       mocha.run();
-  </script>
+  	</script>
 </body>
 </html>
