Made a new game file and tried to implement a card

--- a/index.html
+++ b/index.html
@@ -2,10 +2,20 @@
 <html>
 <head>
 	<title>SET</title>
-<head>
-<link rel="setsheet" type="text/css" href="style.css">
+	<link rel="setsheet" type="text/css" href="style.css">
+</head>
 <body>
+	<div id="drawing">
+	</div>
 	<div id="content">
-	<form method="post" name="set_form" id="set_form" action="/en/set/submit_set">
-		<table id="board" border="0" class></table>
-			<tbody>
+	</div>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/3.0.12/svg.js"></script>
+	<script type="module" src="./js/card.js"></script>
+	<script type="module" src="./js/deck.js"></script>
+	<script type="module" src="./js/selector.js"></script>
+	<script type="module" src="./js/PlaySet.js"></script>
+</body>
+</html>
+
+		
+		
