Added clickable event and example cards

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</div>
 	<div id="content">
 	</div>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/3.0.12/svg.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/2.7.1/svg.min.js"></script>
 	<script type="module" src="./js/card.js"></script>
 	<script type="module" src="./js/deck.js"></script>
 	<script type="module" src="./js/selector.js"></script>
